# Inspirations

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude-suggested-improvements.md  pyproject.toml
.githooks/: post-merge
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: admin.html  admin.js  app.js  index.html  styles.css
app/mockups/: index.html  pinterest_tag_cards.html  pinterest_tag_cards_compact.html
docs/: AI_TAGGING_PLAN.md  ARCHITECTURE.md  BUILD_TEST_PLAN.md  CARD_CONTENT_PLAN.md  EXPORT_IMPRESSIONS.md  PRODUCT_SPEC.md  SEARCH_STRATEGY.md  STATUS.md  WORKFLOWS.md  codex_worklog_2026-02-05.md  fast_path.md  handoff.md  next_steps.md  potential_future_options.md  pr_summary.md  tagging_pipeline.md  tagging_plan.md  tagging_timing.md
mockup/: badges.html  cards.html  curation.html  index.html
scripts/: make_mock_scans.py
src/inspirations/: ai.py  cli.py  db.py  devserver.py  security.py  server.py  storage.py  store.py  thumbnails.py
src/inspirations/importers/: facebook_saved.py  pinterest_crawler.py  scans.py
tests/: test_ai_gemini_parse.py  test_ai_mock.py  test_ai_recitation_fallback.py  test_ai_semantic.py  test_facebook_import.py  test_pinterest_import.py  test_preview_extract.py  test_scans_import.py  test_security.py  test_server_api.py  test_store.py  test_thumbnails.py
tools/: post_merge_maintenance.py  session_checkpoint.py  session_sync.py  tagging_batch.py  tagging_dashboard.py  tagging_pipeline.py  tagging_runner.py
